Add entity model modifiers and redo custom models